GNOME Bugzilla – Bug 738893
ComboBox in appears-as-list mode: Finishing scroll with mouse causes menu to pop down
Last modified: 2017-09-04 23:14:54 UTC
GtkCombobox with "appears-as-list" Gth+ 3.14.1 Click on "Down Arrow" to bring up list and scrollbar Move the scroll-bar down with the mouse - release mouse button and list collapses. The only way is to scroll-down until the required entry is visible in the list and move the mouse cursor to the (left) into the list and over the required entry and then release the mouse button. This does, of course, mean 1 less mouse click but it is not an easy way to work.
Is this the same (or related) bug? https://bugzilla.redhat.com/show_bug.cgi?id=1149335
I really can't tell if it is related - I can't understand the description of the problem in redhat (what icon, what menu?) and I don't know the internals of how the GtkCombobox with "appears-as-list" relates to the problem described in that bug. In addition this problem is new in Gtk 3.14 - it has worked fine until a few days ago.
general observation: There are various problems with appears-as-list, many of which concern mouse input/release.
Confirmed. This happens on any button release within the popup ScrolledWindow, including after clicking to page/warp, or when releasing a drag of the scrollbar. Should be trivial to fix - patch imminent.
Created attachment 359123 [details] [review] ComboBox: Don’t popdown if releasing on scrollbar On button release, we were popping down if the event widget was anything but priv->button. This broke scrolling by clicking a mouse button, i.e. when releasing a click in the trough or finishing a drag of either bar. That’s unexpected, inconvenient, and pointless, so let’s stop doing it. -- While this works – and does not seem capable of breaking anything* – testing it revealed a pre-existing problem to me: If you start a drag on the Scrollbar, then move back to the TreeView proper, then release over the latter, you get this: > Gtk-CRITICAL **: gtk_css_gadget_queue_allocate: assertion 'GTK_IS_CSS_GADGET (gadget)' failed Backtrace impending. Still, at least this patch doesn’t make anything /worse/!* *he says with hopeless optimism
(In reply to Daniel Boles from comment #5) > If you start a drag on the Scrollbar, then move back to the TreeView proper, > then release over the latter, you get this: > > > Gtk-CRITICAL **: gtk_css_gadget_queue_allocate: assertion 'GTK_IS_CSS_GADGET (gadget)' failed > > Backtrace impending. That happens any time you release and cause the CB to popdown, when the Scrollbar was fully shown due to having started a drag. Filed as Bug 787274
Attachment 359123 [details] pushed as 99e27ab - ComboBox: Don’t popdown if releasing on scrollbar